--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,8 @@
-db.default.driver="org.postgresql.Driver"
-db.default.url="jdbc:postgresql://localhost:5432/scalikejdbc"
-db.default.user="sa"
-db.default.password=""
+db.postgres.driver="org.postgresql.Driver"
+db.postgres.url="jdbc:postgresql://localhost:5432/postgres"
+db.postgres.user="postgres"
+db.postgres.password="postgres"
 
-# Connection Pool settings
 db.default.poolInitialSize=10
 db.default.poolMaxSize=20
 db.default.connectionTimeoutMillis=1000
