--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,11 @@ db.postgres.url="jdbc:postgresql://localhost:5432/postgres"
 db.postgres.user="postgres"
 db.postgres.password="postgres"
 
+db.or.driver="oracle.jdbc.OracleDriver"
+db.or.url="jdbc:oracle:thin:@//localhost:1521/DB"
+db.or.user=""
+db.or.password=""
+
 db.default.poolInitialSize=10
 db.default.poolMaxSize=20
 db.default.connectionTimeoutMillis=1000
