actor recieves a heartbeat

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,5 @@ db.default.poolMaxSize=7
 db.default.poolConnectionTimeoutMillis=1000
 db.default.poolValidationQuery="select 1 as one"
 db.default.poolFactoryName="commons-dbcp2"
+
+dir.documents="/home/stanislav/newfolder"
